--- a/visa-system/src/app/app.component.html
+++ b/visa-system/src/app/app.component.html
@@ -1,4 +1,23 @@
-<h1>Example</h1>
 <title>{{title}}</title>
+<table width=100% >
 
+    <!-- <nav class= "navbar-expand-md navbar-dark fixed-top bg-dark">
+        <a class="navbar-brand" href="#">Visa-App</a>
+                
+                
+    </nav> -->
+
+
+        <tr>
+            <td>
+                <a routerLink="/">Home</a>
+            </td>
+            <td>
+                <a routerLink="/case-studies">Case Studies</a>
+            </td>
+            <td>
+                <a routerLink="/services">Services</a>
+            </td>
+        </tr>
+        </table>
 <app-applicant></app-applicant>
