--- a/visa-system/src/app/app.component.html
+++ b/visa-system/src/app/app.component.html
@@ -1,14 +1,23 @@
 <title>{{title}}</title>
-<table width=100% >
+<table width=100%  >
 
-    <!-- <nav class= "navbar-expand-md navbar-dark fixed-top bg-dark">
+    <nav class= "navbar-expand-md navbar-dark fixed-top bg-dark">
         <a class="navbar-brand" href="#">Visa-App</a>
+        
+                
+        <a class="navbar-brand" routerLink="/">Home</a>
                 
                 
-    </nav> -->
+        <a  class="navbar-brand" routerLink="/case-studies">Case Studies</a>
+                
+        <a class="navbar-brand" routerLink="/services">Services</a>
+                
+                
+                
+    </nav>
 
 
-        <tr>
+        <tr >
             <td>
                 <a routerLink="/">Home</a>
             </td>
