done the home routing

--- a/visa-system/src/app/app.component.html
+++ b/visa-system/src/app/app.component.html
@@ -2,31 +2,19 @@
 <table width=100%  >
 
     <nav class= "navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#">Visa-App</a>
+        <a class="navbar-brand" href="/">Visa-App</a>
         
                 
         <a class="navbar-brand" routerLink="/">Home</a>
                 
-                
-        <a  class="navbar-brand" routerLink="/case-studies">Case Studies</a>
-                
-        <a class="navbar-brand" routerLink="/services">Services</a>
-                
+        <a  class="navbar-brand" routerLink="/applicant">applicant</a>
                 
                 
     </nav>
 
 
-        <tr >
-            <td>
-                <a routerLink="/">Home</a>
-            </td>
-            <td>
-                <a routerLink="/case-studies">Case Studies</a>
-            </td>
-            <td>
-                <a routerLink="/services">Services</a>
-            </td>
-        </tr>
-        </table>
-<app-applicant></app-applicant>
+    
+      
+<!-- <app-applicant></app-applicant> -->
+<router-outlet></router-outlet>
+
