--- a/visa-system/src/app/home/home.component.html
+++ b/visa-system/src/app/home/home.component.html
@@ -1,1 +1,27 @@
-<p>home works!</p>
+<br>
+<br><br><br>
+<div class="container marketing">
+
+
+        <!-- Three columns of text below the carousel -->
+        <div class="row">
+          <div class="col-lg-4">
+            <img class="rounded-circle" src="assets/images/Pablo-Escobar-1991.jpg" alt="Generic placeholder image" width="200" height="200">
+            <h2>Online Training</h2>
+            <p>Learn Anytime with Pluralsight at Mastek available on Mobile App for on the go Learning</p>
+            <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+          </div><!-- /.col-lg-4 -->
+          <div class="col-lg-4">
+            <img class="rounded-circle" src="assets/images/cali-cartel-brothers-1051955.jpg" alt="Generic placeholder image" width="200" height="200">
+            <h2>Classroom Training</h2>
+            <p> Instructor led training for handson experience on full stack application development</p>
+            <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+          </div><!-- /.col-lg-4 -->
+          <div class="col-lg-4">
+            <img class="rounded-circle" src="assets/images/190213_ntl_el_chapo_1253_hpMain_16x9_992.jpg" alt="Generic placeholder image" width="200" height="200">
+            <h2>Graduate Programme</h2>
+            <p>exculsive long duration classsroom program with handson and online Learning as blended learning program</p>
+            <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
+          </div><!-- /.col-lg-4 -->
+        </div><!-- /.row -->
+        </div>
