added some styling

--- a/visa-system/src/app/applicant/applicant.component.css
+++ b/visa-system/src/app/applicant/applicant.component.css
@@ -17,7 +17,8 @@ h1{
 }
 
 th{
-    border-block-start-style: dotted;
+    border-block-start-style: double;
+    text-align: center;
 }
 tr{
     border-block-start-style: solid;
