toggle edit form working

--- a/visa-system/src/app/applicant/applicant.component.css
+++ b/visa-system/src/app/applicant/applicant.component.css
@@ -18,7 +18,7 @@ h1{
 
 th{
     border-block-start-style: double;
-    text-align: center;
+    padding: 10px;
 }
 tr{
     border-block-start-style: solid;
