--- a/visa-system/src/app/applicant/applicant.component.html
+++ b/visa-system/src/app/applicant/applicant.component.html
@@ -426,7 +426,7 @@
 </div> -->
 
 
-
+<div class="data-table">
 <h1>Application Details <button (click)="showApplicationForm()">+</button>
 </h1>
 <form *ngIf="isApplicationFormVisible" 
@@ -586,7 +586,7 @@
     </tr>
 </table>   
 </form>
-<table>
+<table >
     <tr>
         <th>Leaving Date</th>
         <th>Arrival Date</th> 
@@ -657,3 +657,4 @@
         <td style="text-align:center">{{p.howMuchDoYouEarnAfterTax}}</td>
     </tr>
 </table>
+</div>
