--- a/visa-system/src/app/home/home.component.html
+++ b/visa-system/src/app/home/home.component.html
@@ -6,21 +6,22 @@
         <!-- Three columns of text below the carousel -->
         <div class="row">
           <div class="col-lg-4">
-            <img class="rounded-circle" src="assets/images/Pablo-Escobar-1991.jpg" alt="Generic placeholder image" width="200" height="200">
-            <h2>Online Training</h2>
-            <p>Learn Anytime with Pluralsight at Mastek available on Mobile App for on the go Learning</p>
+            <img class="rounded-circle" src="assets/images/" alt="Generic placeholder image" width="200" height="200">
+            <h2>Carols brummings</h2>
+            <p>Carlos Applied and found the process very easy and quick "10/10 service got a speedy responce"</p>
             <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <img class="rounded-circle" src="assets/images/cali-cartel-brothers-1051955.jpg" alt="Generic placeholder image" width="200" height="200">
-            <h2>Classroom Training</h2>
-            <p> Instructor led training for handson experience on full stack application development</p>
+            <img class="rounded-circle" src="assets/images/" alt="Generic placeholder image" width="200" height="200">
+            <h2>fernandaz punta</h2>
+            <p>fernandaz found the process hard at first as it was his first time but with some guidence he was through the 
+                boarder in no time </p>
             <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <img class="rounded-circle" src="assets/images/190213_ntl_el_chapo_1253_hpMain_16x9_992.jpg" alt="Generic placeholder image" width="200" height="200">
-            <h2>Graduate Programme</h2>
-            <p>exculsive long duration classsroom program with handson and online Learning as blended learning program</p>
+            <img class="rounded-circle" src="assets/images/" alt="Generic placeholder image" width="200" height="200">
+            <h2>juan calirado</h2>
+            <p>juan has been to the Uk many times and found the system working intuitive as it brings up all his details</p>
             <p><a class="btn btn-secondary" href="#" role="button">View details »</a></p>
           </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
